[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "yt-audio-to-text"
authors = ["Stephen <lourdustephen95@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"
gtts = "~=2.2.2"
pyaudio = "~=0.2.1"
pytube = "~=10.7.2"
streamlit = "~=0.88.0"
openai = "~=0.27.4"
wave = "~=0.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


