[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "My awesome Python project"
authors = ["John Doe <john.doe@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
gtts = "^2.2.2"
pyaudio = "^0.2.11"
pytube = "^10.7.2"
streamlit = "^0.88.0"
openai = "^0.27.4"
wave = "^0.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
