[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "yt-audio-to-text"
authors = ["Stephen <lourdustephen95@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"
gtts = "~=2.2.2"
pytube = "~=10.7.2"
streamlit = "~=0.88.0"
openai = "~=0.27.4"
wave = "~=0.0.2"
pyaudio = { version = "^0.2.11", markers = "sys_platform == 'linux'" }
protobuf = "~=3.19.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


